--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
     <title>Presto</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg p-navbar fixed-top">
-        <div class="container-fluid" id="p-navbar">
+    <nav class="navbar navbar-expand-lg p-navbar fixed-top" >
+        <div class="container-fluid" id="pnavbar">
           
             <a class="navbar-brand fs-3 fw-bold d-lg-none" href="./index.html"><i class="fas fa-shopping-cart"></i></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-ellipsis-h"></i>
+          <button  id="p-nav-btn"class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-ellipsis-h text-white"></i>
           </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-                    <a class="navbar-brand fs-3 fw-bold" href="#">Presto</a>
-                    <form class="d-flex">
+            <div class="collapse navbar-collapse justify-content-between px-5" id="navbarSupportedContent">
+                    <a class="navbar-brand fs-1 fw-bold mt-3 mt-lg-0" href="#">Presto</a>
+                    <form class="d-flex my-2">
                         <input class="form-control me-2 rounded-pill" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success rounded-circle" type="submit"><i class="fas fa-search"></i></button>
+                        <button class="btn btn-nav rounded-circle" type="submit"><i class="fas fa-search"></i></button>
                     </form>
-                    <ul class="navbar-nav mb-2 mb-lg-0">
+                    <ul class="navbar-nav mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#">Home</a>
+                        <a class="nav-link px-3 " aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Annunci</a>
+                        <a class="nav-link px-3" href="#">Annunci</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Profilo</a>
+                        <a class="nav-link px-3" href="#">Profilo</a>
                     </li>
                     </ul>
             </div>
@@ -65,7 +65,8 @@
     -->
 
     <script>
-        let nav = document.querySelector('#p-navbar')
+        let nav = document.querySelector('#pnavbar')
+        let btnNav = document.querySelector('#p-nav-btn')
 
         document.addEventListener('scroll', function(){
             if(window.scrollY >500){
@@ -73,6 +74,10 @@
             }else{
                 nav.classList.remove('p-nav-scrolled')
             }
+        })
+
+        btnNav.addEventListener('click', function(){
+          btnNav.classList.toggle('open')
         })
     </script>
   </body>
